hack/manifests/dex/ca.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-auth
