hack/manifests/dex/dex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: identity-service
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
    name: dex
  name: dex
  namespace: kube-auth
spec:
  ports:
  - name: http
    port: 5556
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 5558
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/component: identity-service
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
    name: dex
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: identity-service
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
    name: dex
  name: dex
  namespace: kube-auth
spec:
  rules:
  - host: dex.minikube.local
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: 5556
        path: /
  tls:
  - hosts:
    - dex.minikube.local
    secretName: dex-tls-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: identity-service
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
    name: dex
  name: dex
  namespace: kube-auth
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: identity-service
      app.kubernetes.io/name: dex
      app.kubernetes.io/part-of: dex
      name: dex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: identity-service
        app.kubernetes.io/name: dex
        app.kubernetes.io/part-of: dex
        name: dex
    spec:
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/conf/config.yaml
        image: quay.io/dexidp/dex:v2.18.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: 5556
          timeoutSeconds: 3
        name: dex
        ports:
        - containerPort: 5556
          name: http
          protocol: TCP
        - containerPort: 5558
          name: metrics
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 5556
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/dex/conf
          name: config
      - command:
        - /app/bin/dex-k8s-ingress-watcher
        - serve
        - --incluster
        - --dex-grpc-address
        - 127.0.0.1:5557
        image: mintel/dex-k8s-ingress-watcher:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: dex-k8s-ingress-watcher
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      serviceAccount: dex
      serviceAccountName: dex
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          name: dex
        name: config
